--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
   <groupId>MakaiaAssignment</groupId>
   <artifactId>MakaiaAssignment</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  	<properties>
+		<aspectj.version>1.9.5</aspectj.version>
+	</properties>
   	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -55,4 +58,22 @@
 			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+				<suiteXmlFiles> 
+					<suiteXmlFile>testng.xml</suiteXmlFile> 
+				</suiteXmlFiles>
+					
+				</configuration>
+				
+			</plugin>
+			
+		</plugins>
+	</build>
+	
 </project>
